[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entities/Spark.gd" type="Script" id=1]
[ext_resource path="res://images/ball.png" type="Texture" id=2]
[ext_resource path="res://audio/hover.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/Bal.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="Spark" type="RigidBody2D"]
collision_layer = 0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="lifetime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="firePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="breakPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.5
[connection signal="body_entered" from="." to="." method="_on_Spark_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
